[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/default.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/level/GameArea.gd" type="Script" id=2]
[ext_resource path="res://scripts/level/Interface.gd" type="Script" id=3]
[ext_resource path="res://assets/success.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/cell.wav" type="AudioStream" id=5]

[node name="Level" type="Node"]

[node name="Interface" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="Top" type="HBoxContainer" parent="Interface"]
anchor_right = 1.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLabels" type="MarginContainer" parent="Interface/Top"]
margin_right = 476.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 10
custom_constants/margin_left = 25
custom_constants/margin_bottom = 10

[node name="StepLabel" type="Label" parent="Interface/Top/TopLabels"]
margin_left = 25.0
margin_top = 16.0
margin_right = 451.0
margin_bottom = 34.0
text = "0"

[node name="TopButtons" type="MarginContainer" parent="Interface/Top"]
margin_left = 480.0
margin_right = 600.0
margin_bottom = 50.0
custom_constants/margin_right = 25
custom_constants/margin_top = 10
custom_constants/margin_left = 25
custom_constants/margin_bottom = 10

[node name="BackButton" type="Button" parent="Interface/Top/TopButtons"]
margin_left = 25.0
margin_top = 10.0
margin_right = 95.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 0 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="CenterContainer" parent="Interface"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButtons" type="HBoxContainer" parent="Interface/Bottom"]
margin_left = 150.0
margin_top = 25.0
margin_right = 450.0
margin_bottom = 75.0
custom_constants/separation = 100

[node name="ResetButton" type="Button" parent="Interface/Bottom/BottomButtons"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TipButton" type="Button" parent="Interface/Bottom/BottomButtons"]
margin_left = 200.0
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Tip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCompletePopup" type="Popup" parent="Interface"]
margin_right = 300.0
margin_bottom = 50.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="Interface/LevelCompletePopup"]
margin_left = 200.0
margin_top = 15.0
margin_right = 293.0
margin_bottom = 39.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="Interface/LevelCompletePopup"]
margin_left = 25.0
margin_top = 15.0
margin_right = 118.0
margin_bottom = 39.0
text = "Next level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameArea" type="Node2D" parent="."]
position = Vector2( 50, 100 )
script = ExtResource( 2 )

[node name="Sound" type="Node" parent="GameArea"]

[node name="CellSound" type="AudioStreamPlayer" parent="GameArea/Sound"]
stream = ExtResource( 5 )

[node name="LevelCompleteSound" type="AudioStreamPlayer" parent="GameArea/Sound"]
stream = ExtResource( 4 )
[connection signal="pressed" from="Interface/Top/TopButtons/BackButton" to="GameArea" method="_on_back_pressed"]
[connection signal="pressed" from="Interface/Bottom/BottomButtons/ResetButton" to="GameArea" method="_on_reset_pressed"]
[connection signal="pressed" from="Interface/Bottom/BottomButtons/TipButton" to="GameArea" method="_on_tip_pressed"]
[connection signal="pressed" from="Interface/LevelCompletePopup/MenuButton" to="GameArea" method="_on_menu_pressed"]
[connection signal="pressed" from="Interface/LevelCompletePopup/NextButton" to="GameArea" method="_on_next_level_pressed"]
[connection signal="level_complete" from="GameArea" to="Interface" method="_on_level_complete"]
[connection signal="reset" from="GameArea" to="Interface" method="_on_reset"]
[connection signal="step" from="GameArea" to="Interface" method="_on_step"]
[connection signal="tip" from="GameArea" to="Interface" method="_on_tip"]
